--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -2,7 +2,7 @@
 <br>
 <a class="text-2xl text-white rounded p-3 font-extrabold bg-gradient-to-br from-blue-200 to-blue-600" href="/posts/new">ADD NEW</a>
 
-<a class="text-2xl text-white rounded p-3 font-extrabold bg-gradient-to-br from-red-200 to-red-600" href="/posts/delete">DELETE ALL</a>
+<a class="text-2xl text-white rounded p-3 font-extrabold bg-gradient-to-br from-red-200 to-red-600" href="/posts/delete">DELETE ALL!</a>
 <br>
 <br>
 
