--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -10,3 +10,4 @@
 <% @posts.each do |post| %>
   <span class="text-1xl font-extrabold text-transparent bg-clip-text bg-gradient-to-br from-orange-400 to-red-400"><%= post.title %></span><br>
 <% end %>
+<span class="text-1xl font-extrabold text-transparent bg-clip-text bg-gradient-to-br from-orange-400 to-red-400"><%= @remote_ip %></span><br>
