Update view to know it's a preview

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -7,6 +7,7 @@
 <br><br>
 
 
+<h3>This is a preview!!!</h3>
 <% @posts.each do |post| %>
   <span class="text-1xl font-extrabold text-transparent bg-clip-text bg-gradient-to-br from-orange-400 to-red-400"><%= post.title %></span><br>
 <% end %>
