--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -10,3 +10,11 @@
 <% @posts.each do |post| %>
   <span class="text-1xl font-extrabold text-transparent bg-clip-text bg-gradient-to-br from-orange-400 to-red-400"><%= post.title %></span><br>
 <% end %>
+
+<br>
+CLOUD66_VARIANT_TAG: "<%= ENV["CLOUD66_VARIANT_TAG"] %>"
+<br>
+CLOUD66_VARIANT_TYPE: "<%= ENV["CLOUD66_VARIANT_TYPE"] %>"
+<br>
+CLOUD66_VARIANT_TYPE_NAME: "<%= ENV["CLOUD66_VARIANT_TYPE_NAME"] %>"
+<br>
